--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
       <div class="repair__head">
         <p>ЦЕНЫ НА УСЛУГИ</p>
       </div>
-      <div class="swiper">
+      <div class="swiper prices-mobile">
         <div class="swiper-wrapper prices repair__container">
           <div class="price-head-hidden repair__container--slidePrice ">
             <div class="desc-price slidePrice-element">
@@ -455,9 +455,61 @@
         </div>
         <div class="swiper-pagination"></div>
       </div>
+      <table class="prices-table">
+        <thead>
+          <tr>
+            <th class="desc-price">Ремонтные услуги</th>
+            <th>Цена</th>
+            <th>Срок</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="desc-price">
+              <p>Тестирование с выдачей технического заключения</p>
+            </td>
+            <td>1000 р</td>
+            <td>30-120 мин</td>
+            <td><button class="order-btn">Заказать ></button></td>
+          </tr>
+          <tr>
+            <td class="desc-price">
+              <p>Диагностика</p>
+            </td>
+            <td>Бесплатно</td>
+            <td>30 мин</td>
+            <td><button class="order-btn">Заказать ></button></td>
+          </tr>
+          <tr>
+            <td class="desc-price">
+              <p>Замена дисплея</p>
+            </td>
+            <td>1000 р</td>
+            <td>30-120 мин</td>
+            <td><button class="order-btn">Заказать ></button></td>
+          </tr>
+          <tr>
+            <td class="desc-price">
+              <p>Замена полифонического динамика</p>
+            </td>
+            <td>1000 р</td>
+            <td>30-120 мин</td>
+            <td><button class="order-btn">Заказать ></button></td>
+          </tr>
+          <tr>
+            <td class="desc-price">
+              <p>Замена программного обеспечения</p>
+            </td>
+            <td>1000 р</td>
+            <td>30-120 мин</td>
+            <td><button class="order-btn">Заказать ></button></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
-    <div class="about">
+    <div class="about about__get">
       <p>Все цены указаны с учетом НДС. Стоимость ремонта указана на единичную услугу. Для получения коммерческого
         предложения на постоянное обслуживание, оставьте заявку.</p>
     </div>
