fixed modal buttons 1440

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       </button>
       <div class="modal">
         <h2 class="modal__heading">Заявка на сервисное обслуживание</h2>
-        Информация об устройстве
+        <p>Информация об устройстве</p>
         <form class="modal__form">
           <input class="modal__input" type="text" placeholder="Производитель">
           <input class="modal__input" type="text" placeholder="Модель">
@@ -234,15 +234,15 @@
       <div class="services__heading">
         <h1>Услуги и сервисы</h1>
         <div class="services__links">
-          <div class="services__heading--hidden">
+          <div id="tools-btn-services" class="services__heading--hidden">
             <p>Оставить заявку</p>
-            <div id="tools-btn-services" class="header__navigation--link">
+            <div class="header__navigation--link">
               <img src="./src/images/tools.svg" />
             </div>
           </div>
-          <div class="services__heading--hidden">
+          <div id="search-btn-services" class="services__heading--hidden">
             <p>Статус ремонта</p>
-            <div id="search-btn-services" class="header__navigation--link">
+            <div class="header__navigation--link">
               <img src="./src/images/search.svg" />
             </div>
           </div>
